syntax = "proto3";

package model;

option go_package = "../model";

import "utils.proto";

service Garages {
  rpc List(GarageUserId) returns (GarageList);
  rpc Add(GarageAndUserId) returns (Empty);
}

message GarageCoordinate {
  float latitude = 1;
  float longitude = 2;
}

message Garage {
  string id = 1;
  string name = 2;
  GarageCoordinate coordinate = 3;
}

message GarageList {
  repeated Garage list = 1;
}

message GarageListBuyer {
  map<string, GarageList> list = 1;
}

message GarageUserId {
  string user_id = 1;
}

message GarageAndUserId{
  string user_id = 1;
  Garage garage = 2;
}