syntax = "proto3";

package model;

option go_package = "../model";

import "utils.proto";

service Users {
  rpc Register(User) returns(Empty);
  rpc List(Empty) returns(UserList);
}

enum UserGender {
  UNDEFINED = 0;
  MALE = 1;
  FEMALE = 2;
}

message User {
  string id = 1;
  string name = 2;
  string password = 3;
  UserGender gender = 4;
}

message UserList {
  repeated User list = 1;
}